fixed shopping cart overlay; made a category icon from string widget to dynamically render from model in explore view; removed desktop check in more button because a lot items are gonna overflow body height anyway; added the icons in models; added placed at in custome orders;

--- a/src/output_style/output.css
+++ b/src/output_style/output.css
@@ -1311,6 +1311,15 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1789,6 +1798,10 @@ input:not(.dont-pad-this-input) {
 
   .md\:bottom-\[5vh\] {
     bottom: 5vh;
+  }
+
+  .md\:bottom-4 {
+    bottom: 1rem;
   }
 
   .md\:my-0 {
